added sabit's problem solving features without bug fixing working fine though

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
-    <string name="app_name">buet_edu_project_one_Vmasum</string>
+    <string name="app_name">BUET Edu Project 1</string>
     <string name="open_nav">open navigation drawer</string>
     <string name="close_nav">close navigation drawer</string>
+
+    <string name="answer_text">উত্তর</string>
 </resources>
